// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: SummaryPage should render correctly 1`] = `
<Page
  empty={Object {}}
  title="Summary Report"
>
  <withRouter(Connect(ReportOptions)) />
  <Panel>
    <Panel.Section
      className="ChartSection"
    >
      <ChartHeader
        onMetricsToggle={[Function]}
        onScaleClick={[Function]}
        onTimeClick={[Function]}
        selectedMetrics={
          Array [
            1,
            2,
            3,
          ]
        }
        selectedScale="linear"
        selectedTime="real"
      />
      <ChartGroup
        metrics={
          Array [
            1,
            2,
            3,
          ]
        }
        yScale="linear"
      />
    </Panel.Section>
  </Panel>
  <Connect(Table) />
  <MetricsModal
    onCancel={[Function]}
    onSubmit={[Function]}
    open={false}
    selectedMetrics={
      Array [
        1,
        2,
        3,
      ]
    }
  />
</Page>
`;

exports[`Page: SummaryPage should render when loading 1`] = `
<Page
  empty={Object {}}
  title="Summary Report"
>
  <withRouter(Connect(ReportOptions))
    reportLoading={true}
  />
  <Panel>
    <Panel.Section
      className="ChartSection pending"
    >
      <ChartHeader
        onMetricsToggle={[Function]}
        onScaleClick={[Function]}
        onTimeClick={[Function]}
        selectedMetrics={
          Array [
            1,
            2,
            3,
          ]
        }
        selectedScale="linear"
        selectedTime="real"
      />
      <ChartGroup
        chartLoading={true}
        metrics={
          Array [
            1,
            2,
            3,
          ]
        }
        yScale="linear"
      />
    </Panel.Section>
    <div
      className="Loading"
    >
      <Loading />
    </div>
  </Panel>
  <Connect(Table) />
  <MetricsModal
    onCancel={[Function]}
    onSubmit={[Function]}
    open={false}
    selectedMetrics={
      Array [
        1,
        2,
        3,
      ]
    }
  />
</Page>
`;
